# joshua-exhibition-graph

./: .cursorrules  .gitignore  .npmrc  optimisations-graphe.md  package-lock.json  package.json  vite-env.d.ts
client/: .gitignore  package-lock.json  package.json  railway.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
client/old/: .env.example  package.json  railway.json  vite.config.ts
client/old/src/: App.tsx
client/public/data/: 0_database_links.json  characters.json  edges.csv  node-positions.json  nodes_and_links.data.json  spatialized_nodes_and_links.data.json  tree.json
client/public/wasm/: force-calculations.js  force-calculations.wasm
client/src/: App.css  App.jsx  App.tsx  config.js  config.ts  index.css
client/src/components/: CustomGraph.tsx  ForceGraph.jsx  ForceGraph.tsx  GamepadControls.jsx  GamepadControls.tsx  PostsRenderer.jsx  TextScramble.jsx
client/src/config/: controlParams.ts  tweakpaneConfig.ts
client/src/contexts/: DataContext.jsx  graphDataUtils.js
client/src/hooks/: useClosestNode.ts  useDebugMode.tsx  useSocketSync.ts
client/src/pages/: CustomGraphView.tsx  Graph.tsx  HomePage.jsx  LombardiGraph.tsx  LombardiGraph3D.tsx  LombardiGraph3DPosts.tsx  LombardiGraph3Dsave.tsx  Post.tsx  Posts.tsx  PostsPage.jsx  VoronoiPosts3D.tsx
client/src/shaders/: forceCalculation.glsl  forceFragment.glsl  forceVertex.glsl
client/src/store/: activeNodeContext.js
scripts/: watch_downloads.py
server/: package.json  tsconfig.json
server/src/: index.ts
spatialization/: pyproject.toml  pyproject_gpu.toml  spatialize.py  spatialize_gpu.py
spatialization-gpu/: pyproject.toml  spatialize_gpu.py
spatialization/simples/: spatialize-posts.py
spatialization/simples/data/: 1a_database_characters.json
spatialization/umap-spatialization/umap/: 1--inject_positions.py  2--decimate_posts.py  3--spatialize.py  4--visualize.py  pyproject.toml  spatialize.py
spatialization/umap-spatialization/umap-gpu/: spatialize_gpu.py
spatialization/umap-spatialization/umap/data/input/: node-positions.json
spatialization/voronoi-spatialization/: README.md  pyproject.toml  spatialize_posts_voronoi.py
spatialization/voronoi-spatialization/data/input/: decimated-posts-with-positions.json
spatialization/voronoi-spatialization/data/output/: spatialized_posts.json
spatialization/voronoi-spatialization/src/: __init__.py  voronoi_distribution.py
src/: App.tsx
src/components/: GamepadControls.tsx
(+109 files in other folders)
