[tool.poetry]
name = "post-spatializer-gpu"
version = "0.1.0"
package-mode = false
description = "Spatialize posts using UMAP with GPU acceleration"
authors = ["Joshua Graph Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
cupy-cuda11x = "11.8.0"
cudf-cuda11 = "23.12.0"
cuml-cuda11 = "23.12.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 