[tool.poetry]
name = "post-spatializer-gpu"
version = "0.1.0"
package-mode = false
description = "Spatialize posts using UMAP with GPU acceleration"
authors = ["Joshua Graph Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
tqdm = "^4.66.1"
torch-geometric = "^2.5.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 