[tool.poetry]
name = "post-spatializer"
version = "0.1.0"
description = "Spatialize posts using UMAP"
authors = ["Joshua Graph Team"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
umap-learn = "0.5.3"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
